# backend

./: .dockerignore  .env.example  .env.logging.example  .gitignore  .pre-commit-config.yaml  .ruffignore  Dockerfile  README.md  SESSIONS_SETUP.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  code_practices.md  database_schema.md  docker.md  logging_system.md  modules_docs.md  ruff.md  testing_instructions.md
docs/wiki/: project_management.md  teams_distrib.md
docs/wiki/for_future/: chat.md  inbox_ideas_list.md  not_tz.md
scripts/: demo_logging.py
src/: auth.py  database.db  main.py  schemas.py  test.db
src/api/v1/: routes.py
src/api/v1/endpoints/: audit.py  auth.py  defense.py  grading_criteria.py  notification.py  perms.py  project.py  resume.py  role.py  sessions.py  user.py
src/core/: audit_context.py  audit_listeners.py  config.py  container.py  database.py  dependencies.py  exceptions.py  logging_config.py  middleware.py  security.py  uow.py
src/core/middleware/: logging_middleware.py
src/db/: database.py  first_try  gen_diagram.py  models.py
src/docs/: architecture.md  testing.md
src/model/: __init__.py  models.py
src/notifications/: templates.py
src/repository/: __init__.py  audit_repository.py  base_repository.py  defense_repository.py  grading_criteria_repository.py  password_reset_repository.py  perms_repository.py  project_repository.py  resume_repository.py  role_repository.py  session_repository.py  user_repository.py
src/schema/: __init__.py  audit.py  auth.py  base.py  defense.py  grading_criteria.py  notification.py  project.py  resume.py  role.py  session.py  user.py
src/services/: __init__.py  audit_service.py  auth_service.py  base_service.py  defense_service.py  grading_criteria_service.py  notification_service.py  perms_service.py  project_service.py  resume_service.py  role_service.py  session_service.py  user_service.py
src/tests/unit/: test_auth_service.py
src/util/: gen_diagram.py  validator.py
tests/unit/: conftest.py  test_auth_service.py  test_base_services.py  test_notification_service.py  test_notification_settings_service.py  test_project_service.py  test_resume_service.py  test_user_service.py
wiki/: API_Defense_System.md  API_Quick_Reference.md  API_Users_Auth.md  AUTH_SERVICE_INTEGRATION.md  README.md  chat.md  code_practices.md  index.md  landing.md  not_tz.md  project_management.md  start_guide.md  teams_distrib.md
wiki/schema/: db.mermaid  db2.mermaid  permissions.mermaid  settings.mermaid
